Nav Bar - Work in Progress. Layout issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -263,7 +263,7 @@ a {
   color: var(--headings);
   font-weight: 600;
   opacity: 0.8;
-  padding: 0.5rem 0;
+  padding: 1rem 0;
 }
 
 .nav .card {
@@ -271,15 +271,74 @@ a {
   background: var(--neutral);
   border-radius: 5px;
   display: flex;
-  margin-bottom: 1rem;
-  margin-top: 1rem;
-  margin: 0 auto;
+  margin: 2.5rem auto 1rem;
   width: 80%;
   flex-direction: column;
+}
+
+.nav__collapsible-link {
+  padding: 1rem 0;
+}
+
+.hamburger {
+  display: inline-block;
+  transform: translateY(10%);
+  width: 32px;
+  height: 32px;
+  background-image: url(../images/icon-hamburger.svg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  transition: transform 0s;
+  animation-name: hamburger;
+  animation-fill-mode: forwards;
+  animation-duration: 0.3s;
+}
+
+.hamburger--closed {
+  background-image: url(../images/icon-close.svg);
+  transform: translateY(0);
+  animation-name: hamburger--closed;
+  animation-duration: 0.3s;
+  animation-fill-mode: forwards;
+}
+
+.nav__collapsible-link-toggler {
+  margin: initial;
+  width: initial;
+}
+
+@keyframes hamburger {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes hamburger--closed {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@media screen and (max-width: 215px) {
+  .nav {
+    justify-content: center;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .nav .collapsible__heading {
     color: var(--neutral);
+  }
+
+  .hamburger {
+    display: none;
   }
 }
